# dragonbyte-engine

./: .gitmodules  CMakeLists.txt  config.ini
default_shaders/: compile.bat  compile.sh  pixel.frag  pixel.frag.spv  simple.vert  simple.vert.spv  simple_multimodel.vert  simple_multimodel.vert.spv
include/: ai_engine.h  audio_engine.h  component.h  compute_shader.h  dragonbyte_engine.h  engine.h  engines.h  file_engine.h  game_clock.h  game_object.h  gameobject.h  input_engine.h  mathematics.h  mesh.h  object_engine.h  object_tree.h  overseer.h  physics_engine.h  physics_types.h  ptr_types.h  render_engine.h  scene.h  tools.h  transform.h
include/default_components/: camera.h  rigidbody.h  simple_input_move.h  time_move.h  time_rotate.h
include/graphics/: pipeline.h  swapchain.h  window.h
include/vulkan/: allocator.h  buffer.h  command_buffer.h  command_pool.h  debug_messenger.h  depth_handler.h  descriptor_pool.h  descriptor_set.h  descriptor_set_handler.h  extensions.h  framebuffer.h  graphics_pipeline.h  helper.h  image.h  index_buffer.h  instance.h  logical_device.h  memory.h  mesh_handler.h  mvp_buffer_handler.h  object_buffer_handler.h  object_data.h  object_info.h  physical_device.h  push_constant.h  queue.h  render_pass.h  shader_module.h  surface.h  (+8 more)
src/: ai_engine.cpp  audio_engine.cpp  compute_shader.cpp  dragonbyte_engine.cpp  engine.cpp  file_engine.cpp  game_clock.cpp  game_object.cpp  input_engine.cpp  intersect_test.cpp  mesh.cpp  object_engine.cpp  overseer.cpp  physics_engine.cpp  ptr_types.cpp  render_engine.cpp  scene.cpp  transform.cpp
(+40 files in other folders)
